fixed bug for background img on ios mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,8 @@ body {
 body.is-os #page-header {
   /* background-attachment: initial !important;
   background-size: cover !important; */
-  background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center top;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
+  background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center top no-repeat scroll;
+  background-size: auto 100vh;
 }
 
 
